--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,4 @@ browser = chrome
 qa.env = https://qa.upgenix.net/web/login/
 qa.user = posmanager35@info.com
 qa.pass = posmanager
+eventTime = 15:30:00
