--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,8 @@ browser = chrome
 qa.env = https://qa.upgenix.net/web/login/
 qa.user = posmanager35@info.com
 qa.pass = posmanager
+
+homepageurl=https://upgenix.net/
+useraccount=POSManager35
+newuser=Mike Bravo
+
