--- a/configuration.properties
+++ b/configuration.properties
@@ -3,3 +3,6 @@ qa.env = https://qa.upgenix.net/web/login/
 qa.user = posmanager35@info.com
 qa.pass = posmanager
 eventTime = 15:30:00
+homepageurl=https://upgenix.net/
+useraccount=POSManager35
+newuser=Mike Bravo
