--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
             <version>1.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.8.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
